--- a/Demo3/DOCUMENTATION/UI/TRANSACTIONS_LAYOUT.ipynb
+++ b/Demo3/DOCUMENTATION/UI/TRANSACTIONS_LAYOUT.ipynb
@@ -49,26 +49,41 @@
    "source": [
     "### Used by reader_layout.py\n",
     "```python\n",
-    "    def create_transaction_table(transactions):\n",
-    "        \"\"\"\n",
-    "        Create a Rich Table to display transaction information\n",
-    "        param transactions: list - A list of transaction dictionaries\n",
-    "        return: Table - A Rich Table object containing transaction information\n",
-    "        \"\"\"\n",
-    "        if not transactions:\n",
-    "            content = Text(\"No transactions available.\", justify=\"center\", style=\"white\")\n",
-    "            return content\n",
-    "        else:\n",
-    "            table = Table(title=\"Transactions\", box=box.SIMPLE_HEAVY)\n",
-    "            table.add_column(\"Amount\", justify=\"right\", style=\"green\")\n",
-    "            table.add_column(\"Description\", style=\"yellow\")\n",
+    "def create_transaction_table(accounts):\n",
+    "    \"\"\"\n",
+    "    Create a Rich Table to display transaction information\n",
+    "    param transactions_with_account_names: list - List of transactions with account names\n",
+    "    return: Table - A Rich Table object containing the transaction data\n",
+    "    \"\"\"\n",
+    "    table = Table(title=\"Transactions Overview\", box=box.SIMPLE_HEAVY)\n",
     "\n",
-    "            for transaction in transactions:\n",
-    "                table.add_row(\n",
-    "                    f\"${transaction.get('amount', 0):.2f}\",\n",
-    "                    transaction.get(\"description\", \"No description\")\n",
-    "                )\n",
-    "        return table\n",
+    "    table.add_column(\"Account Name\", style=\"cyan\", no_wrap=True)\n",
+    "    table.add_column(\"Transaction Type\", style=\"magenta\")\n",
+    "    \n",
+    "    table.add_column(\"Amount\")\n",
+    "    table.add_column(\"Description\", style=\"green\")\n",
+    "\n",
+    "    transactions_with_account_names = [\n",
+    "    {**trans, \"account_name\": account.get(\"name\", \"Unknown\")}\n",
+    "    for account in accounts\n",
+    "    for trans in account.get(\"transactions\", [])\n",
+    "]\n",
+    "\n",
+    "    for transaction in transactions_with_account_names:\n",
+    "        account_name = transaction.get(\"account_name\", \"Unknown\")\n",
+    "        trans_type = transaction.get(\"transaction_type\", \"Unknown\")\n",
+    "        amount = f\"${transaction.get(\"amount\", 0.00):.2f}\"\n",
+    "        description = transaction.get(\"description\", \"\")\n",
+    "\n",
+    "        if trans_type == \"Income\":\n",
+    "            amount = f\"[green]{amount}[/green]\"\n",
+    "        elif trans_type == \"Expense\":\n",
+    "            amount = f\"[red]{amount}[/red]\"\n",
+    "        elif trans_type == \"Transfer\":\n",
+    "            amount = f\"[yellow]{amount}[/yellow]\"\n",
+    "\n",
+    "        table.add_row(account_name, trans_type, amount, description)\n",
+    "    return table\n",
     "```"
    ]
   }
