--- a/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
+++ b/Demo3/DOCUMENTATION/UTILS/TRANSACTIONS.ipynb
@@ -25,44 +25,42 @@
     "\n",
     "def add_new_transaction(state, console):\n",
     "    \"\"\"\n",
-    "        Add a transaction to an account in the shared state\n",
-    "        param state: dict - The current state dictionary\n",
-    "        param console: Console - The Rich Console object to use for input/output\n",
-    "        return: dict - The updated state dictionary\n",
+    "    Add a transaction to an account in the shared state\n",
+    "    param state: dict - The current state dictionary\n",
+    "    param console: Console - The Rich Console object to use for input/output\n",
+    "    return: dict - The updated state dictionary\n",
     "    \"\"\"\n",
-    "\n",
-    "    # Get list of accounts\n",
     "    accounts = state.get(\"accounts\", [])\n",
     "\n",
-    "    # Ensure there are accounts to add transactions to\n",
     "    if not accounts:\n",
     "        return console.print(\"[red]No accounts available. Please add an account first.[/red]\\n\")\n",
     "    \n",
-    "    # Get list of account names\n",
     "    account_names = [account['name'] for account in accounts]\n",
     "\n",
-    "    # Get transaction details from user\n",
     "    transaction_details = get_new_transaction_details(account_names, console)\n",
     "    \n",
-    "    # Update state with new transaction\n",
     "    account_name = transaction_details['account_name']\n",
     "\n",
-    "    # Extract transaction details\n",
+    "    trans_type = transaction_details['transaction_type']\n",
     "    amount = transaction_details['amount']\n",
     "    description = transaction_details['description']\n",
     "\n",
-    "    # Update account balance\n",
-    "    subtract_from_balance(account_name, amount, state)\n",
+    "    if trans_type == \"Expense\":\n",
+    "        subtract_from_balance(account_name, amount, state)\n",
+    "    elif trans_type == \"Income\":\n",
+    "        add_to_balance(account_name, amount, state)\n",
+    "    elif trans_type == \"Transfer\":\n",
+    "        console.print(\"[yellow]Transfer type selected. Functionality not yet implemented.[/yellow]\\n\")\n",
     "\n",
-    "    # Add transaction to account\n",
+    "\n",
     "    for account in accounts:\n",
     "        if account['name'] == account_name:\n",
     "            account.setdefault('transactions', []).append({\n",
+    "                \"transaction_type\": trans_type,\n",
     "                \"amount\": amount,\n",
     "                \"description\": description\n",
     "            })\n",
     "\n",
-    "    # Return updated state\n",
     "    return state\n",
     "#========================================================================================\n",
     "\n",
